fix border-collapse in chess board
In Wt 3.1.11, border-spacing=0,
so it should be overwritten with 2px.

--- a/files/css/1.css
+++ b/files/css/1.css
@@ -14,7 +14,8 @@
 
 table.thechess_board
 {
-    border-Collapse: separate;
+    border-Collapse: separate !important;
+    border-spacing: 2px !important;
 }
 
 .thechess_board td
